reconfigured default values functionality, got rid of field_name kwarg, restructured all tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ install:
   - pip install -q beautifulsoup4
   - pip install -q Pillow
   - pip install -q Django==$DJANGO_VERSION
+  - pip install -q django-cripsy-forms
 before_install:
-  - mkdir -p test_suite/media
   - ./test_suite/install_ffmpeg.sh
 script:
   cd test_suite && coverage run --source='smartfields' manage.py test && cd ..
