--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install -q beautifulsoup4
   - pip install -q Pillow
   - pip install -q Django==$DJANGO_VERSION
-  - pip install -q django-cripsy-forms
+  - pip install -q django-crispy-forms
 before_install:
   - ./test_suite/install_ffmpeg.sh
 script:
