--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - pip install -q Django==$DJANGO_VERSION
   - pip install -q django-crispy-forms
 before_install:
-  - ./test_suite/install_ffmpeg.sh
+  - tests/install_ffmpeg.sh
 script:
   coverage run --source='smartfields' setup.py test
 after_success:
