forgot to add Wand dependencie in travis, added new tag [ci skip], will run travis with tag push.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
   - pip install -q coveralls
   - pip install -q beautifulsoup4
   - pip install -q Pillow
+  - pip install -q Wand
   - pip install -q Django==$DJANGO_VERSION
   - pip install -q django-crispy-forms
 before_install:
