--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ install:
   - pip install -q Django==$DJANGO_VERSION
   - pip install -q django-crispy-forms
 before_install:
-  - sudo apt-add-repository ppa:jon-severinsson/ffmpeg
-  - sudo apt-get update
+  - sudo apt-add-repository -y ppa:jon-severinsson/ffmpeg
+  - sudo apt-get update -qq
   - sudo apt-get -y install ffmpeg
 script:
   coverage run --source='smartfields' setup.py test
