--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,11 @@ install:
   - pip install -q Django==$DJANGO_VERSION
   - pip install -q django-crispy-forms
 before_install:
-  - sudo apt-add-repository -y ppa:kirillshkrogalev/ffmpeg-next
   - sudo apt-get update -qq
-  - sudo apt-get -y install ffmpeg
+  - sudo apt-get -y install wget tar bzip2 flvtool2
+  - wget http://bensbit.co.uk/ffmpeg-2.1.3-64bit-static.tar.bz2
+  - tar jxf ffmpeg-2.1.3-64bit-static.tar.bz2
+  - sudo cp ffmpeg-2.1.3-64bit-static/ffmpeg ffmpeg-2.1.3-64bit-static/ffprobe /usr/bin
 script:
   coverage run --source='smartfields' setup.py test
 after_success:
