--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get -y install wget tar bzip2 flvtool2
-  - wget http://bensbit.co.uk/ffmpeg-2.1.3-64bit-static.tar.bz2
+  - wget http://7d64cbc4e99ce9788059-a127be7d9507d6d1187c85a377fe1ae1.r77.cf1.rackcdn.com/permanent/ffmpeg-2.1.3-64bit-static.tar.bz2
   - tar jxf ffmpeg-2.1.3-64bit-static.tar.bz2
   - sudo cp ffmpeg-2.1.3-64bit-static/ffmpeg ffmpeg-2.1.3-64bit-static/ffprobe /usr/bin
 script:
