--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
   - DJANGO_VERSION=1.7.10
   - DJANGO_VERSION=1.8.4
 install:
+  - pip install -q --upgrade pip
   - pip install -q coveralls
   - pip install -q beautifulsoup4
   - pip install -q Pillow
@@ -22,7 +23,7 @@ before_install:
   - tar jxf ffmpeg-2.1.3-64bit-static.tar.bz2
   - sudo cp ffmpeg-2.1.3-64bit-static/ffmpeg ffmpeg-2.1.3-64bit-static/ffprobe /usr/bin
 script:
-  - python setup.py check --restructuredtext -s
+  - python setup.py check --restructuredtext
   - coverage run --source='smartfields' setup.py test
 after_success:
   coveralls
