--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,11 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-  - "3.7"
 env:
+  - DJANGO_VERSION=1.8.19
   - DJANGO_VERSION=1.9.13
+  - DJANGO_VERSION=1.10.8
   - DJANGO_VERSION=1.11.15
-  - DJANGO_VERSION=2.0.8
-  - DJANGO_VERSION=2.1
 install:
   - pip install -q --upgrade pip
   - pip install -q coveralls
@@ -22,8 +21,9 @@ install:
   - pip install -q django-crispy-forms
   - pip install -q docutils
 before_install:
+  - sudo add-apt-repository -y ppa:mc3man/trusty-media
   - sudo apt-get update -qq
-  # - sudo apt-get -y install ffmpeg
+  - sudo apt-get -y install ffmpeg
   # - wget http://7d64cbc4e99ce9788059-a127be7d9507d6d1187c85a377fe1ae1.r77.cf1.rackcdn.com/permanent/ffmpeg-2.1.3-64bit-static.tar.bz2
   # - tar jxf ffmpeg-2.1.3-64bit-static.tar.bz2
   # - sudo cp ffmpeg-2.1.3-64bit-static/ffmpeg ffmpeg-2.1.3-64bit-static/ffprobe /usr/bin
