--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
 before_install:
   - sudo add-apt-repository -y ppa:mc3man/trusty-media
   - sudo apt-get update -qq
-  - sudo apt-get -y install ffmpeg libjpeg8 libjpeg8-dev
+  - sudo apt-get -y install ffmpeg libjpeg8 libjpeg8-dev libgdal libgdal-dev
   # - wget http://7d64cbc4e99ce9788059-a127be7d9507d6d1187c85a377fe1ae1.r77.cf1.rackcdn.com/permanent/ffmpeg-2.1.3-64bit-static.tar.bz2
   # - tar jxf ffmpeg-2.1.3-64bit-static.tar.bz2
   # - sudo cp ffmpeg-2.1.3-64bit-static/ffmpeg ffmpeg-2.1.3-64bit-static/ffprobe /usr/bin
