--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ python:
 env:
   - DJANGO_VERSION=1.8.19
   - DJANGO_VERSION=1.9.13
-  - DJANGO_VERSION=1.10.8
-  - DJANGO_VERSION=1.11.15
+  # minor issues with 1.10 and 1.11
+  # - DJANGO_VERSION=1.10.8
+  # - DJANGO_VERSION=1.11.15
 install:
   - pip install -q --upgrade pip
   - pip install -q coveralls
