--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
-dist: xenial
+dist: bionic
 language: python
 python:
   - "2.7"
-  - "3.4"
-  - "3.5"
   - "3.6"
   - "3.7"
+  - "3.8"
 env:
   - DJANGO_VERSION=1.8.19
   - DJANGO_VERSION=1.9.13
@@ -13,7 +12,8 @@ env:
   - DJANGO_VERSION=1.11.20
   - DJANGO_VERSION=2.0.13
   - DJANGO_VERSION=2.1.8
-  - DJANGO_VERSION=2.2.1
+  - DJANGO_VERSION=2.2.8
+  - DJANGO_VERSION=3.0
 matrix:
   exclude:
   # - python: "3.6"
@@ -32,12 +32,6 @@ matrix:
     env: DJANGO_VERSION=2.0.13
   - python: "2.7"
     env: DJANGO_VERSION=2.1.8
-  - python: "3.4"
-    env: DJANGO_VERSION=2.1.8
-  - python: "2.7"
-    env: DJANGO_VERSION=2.2.1
-  - python: "3.4"
-    env: DJANGO_VERSION=2.2.1
 install:
   - pip install -q --upgrade pip
   - pip install -q coveralls
