--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,9 @@ env:
   - DJANGO_VERSION=1.11.20
   - DJANGO_VERSION=2.2.8
   - DJANGO_VERSION=3.0
+  - DJANGO_VERSION=3.1
 matrix:
-  exclude:
-  - python: "2.7"
-    env: DJANGO_VERSION=2.2.8
-  - python: "2.7"
-    env: DJANGO_VERSION=3.0
+  exclude: []
 install:
   - pip install -q --upgrade pip
   - pip install -q coveralls
